Actualizacion de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/images-6d562.appspot.com/o/images_mantenimiento%2FLOGO.jpeg?alt=media&token=fec171ef-139d-4431-9669-0edf07ffa17a" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
     <title>JCM S.A.S</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>En JCM S.A.S., nos dedicamos a optimizar y simplificar el proceso de mantenimiento de vehículos para empresas y particulares. Nuestra plataforma está diseñada para gestionar eficientemente los reportes de mantenimiento de su flota de autos, asegurando que cada vehículo reciba el cuidado y la atención que necesita para mantenerse en perfectas condiciones.</noscript>
     <div id="root"></div>
   </body>
 </html>
