--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>JCM S.A.S</title>
   </head>
   <body>
-    <noscript>En JCM S.A.S., nos dedicamos a optimizar y simplificar el proceso de mantenimiento de vehículos para empresas y particulares. Nuestra plataforma está diseñada para gestionar eficientemente los reportes de mantenimiento de su flota de autos, asegurando que cada vehículo reciba el cuidado y la atención que necesita para mantenerse en perfectas condiciones.</noscript>
+    <noscript>En JCM S.A.S.</noscript>
     <div id="root"></div>
   </body>
 </html>
